syntax = "proto3";

option csharp_namespace = "AlgoShop.Order.Protos";

service OrderProcessing {

    rpc GetAsync(GetRequest)
    returns (GetResponse); 

    rpc CreateAsync(CreateRequest)
    returns (CreateResponse); 
}

message GetRequest {
}

message GetResponse {
     repeated Order orders = 1;
}

message CreateRequest {
     repeated Product products = 1;  
}

message CreateResponse {
     int32 id = 1;  
}

message Order {
    int32 id = 1; 
    repeated  Product products = 2;  
}

message Product{
    int32 id = 1;
    int32 quantity = 2;
}